kube01/apps/tools/phpmyadmin/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      serviceAccountName: phpmyadmin-sa
      containers:
        - image: harbor.nf.lab/proxy.docker.io/linuxserver/phpmyadmin
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
          name: phpmyadmin
          ports:
            - containerPort: 80
              name: phpmyadmin-port
          volumeMounts:
            - name: config-pv
              mountPath: /config
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: phpmyadmin-pvc
