kube01/apps/tools/phpmyadmin/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: phpmyadmin-svc
  labels:
    app: phpmyadmin
spec:
  ports:
    - name: phpmyadmin-svc-port
      port: 80
      targetPort: 80
  selector:
    app: phpmyadmin
